CI CD docker and node js added for testing and dockerizing autonomly

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -27,7 +27,7 @@ jobs:
           context: ./
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/quote-consumer-reverser:latest
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/basic-counter-frontend:latest
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
