--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "test": "jest",
+    "test": "jest ./test/Counter.spec.js",
     "test:consumer": "mocha ./Consumer.spec.js",
     "pact-publish": "node publish.js"
   },
@@ -27,6 +27,5 @@
     "mocha": "^9.1.3",
     "postcss": "^8.3.5",
     "vue-jest": "^3.0.4"
-  },
-  "type": "module"
+  }
 }
